Update 'backend-tests-go-qmiwmrdf' component image to: quay.io/rhtap_qe/backend-tests-go-qmiwmrdf:ba5e100f7094b7e785fd5d571a8ff4db4dd53714@sha256:ddad043ad17511f1db89c1f3524610166526f317169280fd7eb501bbcffab44e

--- a/components/backend-tests-go-qmiwmrdf/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-qmiwmrdf/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-qmiwmrdf
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-qmiwmrdf:ba5e100f7094b7e785fd5d571a8ff4db4dd53714@sha256:ddad043ad17511f1db89c1f3524610166526f317169280fd7eb501bbcffab44e
+          name: container-image
